Fixed Wrap around Main Pix & Some Formatting

--- a/PNWCoachesSQL/css/mainStyle.css
+++ b/PNWCoachesSQL/css/mainStyle.css
@@ -4,25 +4,13 @@ body {
   margin: 0;
   padding: 1%;
   font-family: 'Poiret One', cursive;
+  font-size: 1em;
 }
 
 h1 {
   font-size: 2em;
-/*
   padding: 5% 0 1% 0;
   margin: 0 0 0 2%;
-*/
-}
-
-p {
-  font-size: 1em;
-}
-
-section#images {
-/*
-  margin: 2% 0 0 2%;
-  padding: 0;
-*/
 }
 
 article {
@@ -31,42 +19,20 @@ article {
   color: white;
 }
 
-img {
-  width: 97%;
-/*
-  margin: 0 0 3% 0;
-  padding: 2%;
-*/
-}
-
 aside {
   background-color: rgba(255, 255, 255, 0.2);
   color: white;
   padding: .5% 2%;
-/*  margin: 0 3% 0 0;*/
+  margin: 0 3% 0 0;
 }
 
 .thumbnail {
   float: left;
-/*  margin: 1% 3% 1% 0;*/
+  margin: 1% 3% 1% 0;
   width: 50%;
 }
 
 .signature {
   font-size: 1em;
   font-family: 'Shadows Into Light Two', cursive;
-}
-
-span_1_of_2 {
-/*
-  padding: 0;
-  margin: 5% 0 0 0;
-*/
-}
-
-span_2_of_3 {
-/*
-  padding: 0;
-  margin: 0;
-*/
 }
